Change all variables named data to id

--- a/social-bst/html/social_8h.html
+++ b/social-bst/html/social_8h.html
@@ -637,7 +637,7 @@ Funções</h2></td></tr>
 <dl class="params"><dt>Parâmetros</dt><dd>
   <table class="params">
     <tr><td class="paramname">head</td><td>Ponteiro para o nó cabeça da BST de tipo A </td></tr>
-    <tr><td class="paramname">Valor</td><td>do nó a ser deletado </td></tr>
+    <tr><td class="paramname">data</td><td>Valor do nó a ser deletado </td></tr>
   </table>
   </dd>
 </dl>
